// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/UserCenter/Modal/UserForm should match snapshot when isAdmin is truthy 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-vertical"
    >
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="username"
              title="用户名"
            >
              用户名
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input ant-input-disabled basic-input-wrapper css-1pd1cd5"
                  disabled=""
                  id="username"
                  placeholder="请输入用户名"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="needUpdatePassWord"
              title="是否需要更新密码"
            >
              是否需要更新密码
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  aria-checked="false"
                  class="ant-switch"
                  id="needUpdatePassWord"
                  role="switch"
                  type="button"
                >
                  <div
                    class="ant-switch-handle"
                  />
                  <span
                    class="ant-switch-inner"
                  >
                    <span
                      class="ant-switch-inner-checked"
                    />
                    <span
                      class="ant-switch-inner-unchecked"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="email"
              title="邮箱"
            >
              邮箱
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input basic-input-wrapper css-1pd1cd5"
                  id="email"
                  placeholder="请输入邮箱"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item input-number-hide-arrows"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="phone"
              title="手机"
            >
              手机
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input basic-input-wrapper css-1pd1cd5"
                  id="phone"
                  placeholder="请输入手机"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="wxid"
              title="微信ID"
            >
              微信ID
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input basic-input-wrapper css-1pd1cd5"
                  id="wxid"
                  placeholder="请输入微信ID"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="opPermissionUids"
              title="平台管理权限"
            >
              平台管理权限
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x ant-select-multiple ant-select-show-arrow ant-select-loading ant-select-show-search"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <div
                      class="ant-select-selection-overflow"
                    >
                      <div
                        class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                        style="opacity: 1;"
                      >
                        <div
                          class="ant-select-selection-search"
                          style="width: 0px;"
                        >
                          <input
                            aria-activedescendant="opPermissionUids_list_0"
                            aria-autocomplete="list"
                            aria-controls="opPermissionUids_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="opPermissionUids_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="opPermissionUids"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                          <span
                            aria-hidden="true"
                            class="ant-select-selection-search-mirror"
                          >
                             
                          </span>
                        </div>
                      </div>
                    </div>
                    <span
                      class="ant-select-selection-placeholder"
                    >
                      请选择平台管理权限
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow ant-select-arrow-loading"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="loading"
                      class="anticon anticon-loading anticon-spin"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="loading"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`base/UserCenter/Modal/UserForm should match snapshot when isUpdate is falsy 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-vertical"
    >
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="username"
              title="用户名"
            >
              用户名
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input basic-input-wrapper css-1pd1cd5"
                  id="username"
                  placeholder="请输入用户名"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="password"
              title="密码"
            >
              密码
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <span
                  class="ant-input-affix-wrapper ant-input-password basic-input-wrapper css-1pd1cd5"
                >
                  <input
                    aria-required="true"
                    class="ant-input"
                    id="password"
                    placeholder="请输入密码"
                    type="password"
                    value=""
                  />
                  <span
                    class="ant-input-suffix"
                  >
                    <span
                      aria-label="eye-invisible"
                      class="anticon anticon-eye-invisible ant-input-password-icon"
                      role="img"
                      tabindex="-1"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="eye-invisible"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                        />
                        <path
                          d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="passwordConfirm"
              title="确认密码"
            >
              确认密码
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <span
                  class="ant-input-affix-wrapper ant-input-password basic-input-wrapper css-1pd1cd5"
                >
                  <input
                    aria-required="true"
                    class="ant-input"
                    id="passwordConfirm"
                    placeholder="请保持两次密码输入一致"
                    type="password"
                    value=""
                  />
                  <span
                    class="ant-input-suffix"
                  >
                    <span
                      aria-label="eye-invisible"
                      class="anticon anticon-eye-invisible ant-input-password-icon"
                      role="img"
                      tabindex="-1"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="eye-invisible"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                        />
                        <path
                          d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="email"
              title="邮箱"
            >
              邮箱
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input basic-input-wrapper css-1pd1cd5"
                  id="email"
                  placeholder="请输入邮箱"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item input-number-hide-arrows"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="phone"
              title="手机"
            >
              手机
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input basic-input-wrapper css-1pd1cd5"
                  id="phone"
                  placeholder="请输入手机"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="wxid"
              title="微信ID"
            >
              微信ID
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input basic-input-wrapper css-1pd1cd5"
                  id="wxid"
                  placeholder="请输入微信ID"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="opPermissionUids"
              title="平台管理权限"
            >
              平台管理权限
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x ant-select-multiple ant-select-show-arrow ant-select-loading ant-select-show-search"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <div
                      class="ant-select-selection-overflow"
                    >
                      <div
                        class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                        style="opacity: 1;"
                      >
                        <div
                          class="ant-select-selection-search"
                          style="width: 0px;"
                        >
                          <input
                            aria-activedescendant="opPermissionUids_list_0"
                            aria-autocomplete="list"
                            aria-controls="opPermissionUids_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="opPermissionUids_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="opPermissionUids"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                          <span
                            aria-hidden="true"
                            class="ant-select-selection-search-mirror"
                          >
                             
                          </span>
                        </div>
                      </div>
                    </div>
                    <span
                      class="ant-select-selection-placeholder"
                    >
                      请选择平台管理权限
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow ant-select-arrow-loading"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="loading"
                      class="anticon anticon-loading anticon-spin"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="loading"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`base/UserCenter/Modal/UserForm should match snapshot when isUpdate is truthy 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-vertical"
    >
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="username"
              title="用户名"
            >
              用户名
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  aria-required="true"
                  class="ant-input ant-input-disabled basic-input-wrapper css-1pd1cd5"
                  disabled=""
                  id="username"
                  placeholder="请输入用户名"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="needUpdatePassWord"
              title="是否需要更新密码"
            >
              是否需要更新密码
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  aria-checked="false"
                  class="ant-switch"
                  id="needUpdatePassWord"
                  role="switch"
                  type="button"
                >
                  <div
                    class="ant-switch-handle"
                  />
                  <span
                    class="ant-switch-inner"
                  >
                    <span
                      class="ant-switch-inner-checked"
                    />
                    <span
                      class="ant-switch-inner-unchecked"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="email"
              title="邮箱"
            >
              邮箱
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input basic-input-wrapper css-1pd1cd5"
                  id="email"
                  placeholder="请输入邮箱"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item input-number-hide-arrows"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="phone"
              title="手机"
            >
              手机
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input basic-input-wrapper css-1pd1cd5"
                  id="phone"
                  placeholder="请输入手机"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="wxid"
              title="微信ID"
            >
              微信ID
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input basic-input-wrapper css-1pd1cd5"
                  id="wxid"
                  placeholder="请输入微信ID"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="opPermissionUids"
              title="平台管理权限"
            >
              平台管理权限
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x ant-select-multiple ant-select-show-arrow ant-select-loading ant-select-show-search"
                >
                  <div
                    class="ant-select-selector"
                  >
                    <div
                      class="ant-select-selection-overflow"
                    >
                      <div
                        class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                        style="opacity: 1;"
                      >
                        <div
                          class="ant-select-selection-search"
                          style="width: 0px;"
                        >
                          <input
                            aria-activedescendant="opPermissionUids_list_0"
                            aria-autocomplete="list"
                            aria-controls="opPermissionUids_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="opPermissionUids_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="opPermissionUids"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                          <span
                            aria-hidden="true"
                            class="ant-select-selection-search-mirror"
                          >
                             
                          </span>
                        </div>
                      </div>
                    </div>
                    <span
                      class="ant-select-selection-placeholder"
                    >
                      请选择平台管理权限
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-arrow ant-select-arrow-loading"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="loading"
                      class="anticon anticon-loading anticon-spin"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="loading"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="isDisabled"
              title=""
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  是否禁用
                </div>
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="info-circle"
                    class="anticon anticon-info-circle tooltips-default-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <button
                  aria-checked="false"
                  class="ant-switch"
                  id="isDisabled"
                  role="switch"
                  type="button"
                >
                  <div
                    class="ant-switch-handle"
                  />
                  <span
                    class="ant-switch-inner"
                  >
                    <span
                      class="ant-switch-inner-checked"
                    />
                    <span
                      class="ant-switch-inner-unchecked"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;
